
Known problems:
    1. The "_parent" and "_empty" frame targets are not handled correctly
    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:
11-Feb-2002
Problems corrected:
    1. Subframes with the same names as others in the same tree no longer cause an infinite loop / stack overflow
Additions:
    1. WebClient now has an exceptionsThrownOnErrorStatus property to control this behavior per client.
Notes:
    1. The decision as to whether a response will throw an exception if its status is 4xx or 5xx is now controlled by
       the exceptionsThrownOnErrorStatus property of WebClient and its subclasses (WebConversation, ServletUnitClient).
       This property is initialized from the HttpUnitOptions property of the same name when the WebClient object is
       created. This allows finer control over this behavior. Tests which depend on this setting should no longer
       interfere with one another.

 5-Feb-2002
Additions:
    1. Form parameters can be reset to their initial values using WebForm.reset().

 4-Feb-2002
Problems corrected:
    1. Forms with query strings included in the action attribute now are submitted with that string intact.
Additions:
    1. Parameters defined in form query strings are now included in the known parameters of a form and requests
       built from it.

 1-Feb-2002
Acknowledgements:
    Thanks to Jochen Hiller for supplying code to use jaxp to select a parser rather than being hardcoded to xerces

Additions:
    1. HttpUnit can now use any jaxp-compliant parser, rather than just xerces.

30-Jan-2002
Acknkowledgements:
    Thanks to Alex Chaffee for implementing context parameters for web.xml in ServletUnit

Additions:
    1. ServletUnit now supports the <context-param> tag.
